# CabanaPD

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  zensical.toml
.git-rewrite/: .msys0000000000013e5810efbf8460c46dfb
.github/workflows/: CI-e4s-build.yml  CI.yml  Nightly.yml  Weekly.yml  build_and_deploy.yml  pre-commit.yml
cmake/: CabanaPD_Config.cmakein  CabanaPD_testing_macros.cmake  FindCLANG_FORMAT.cmake
docs/: citing.md  contributing.md  getting_started.md  index.md
examples/: CMakeLists.txt  CabanaPD_main.cpp  contact_block.cpp  crack_branching.cpp  disk_impact.cpp  elastic_wave.cpp  kalthoff_winkler.cpp  random_cracks.cpp  read_file.cpp  thermal_deformation.cpp
examples/dem/: CMakeLists.txt  Raking.cpp  angle_repose.cpp  powder_fill.cpp
examples/dem/inputs/: angle_of_repose.json  powder_fill.json
examples/inputs/: crack_branching.json  elastic_wave.json  kalthoff_winkler.json  kalthoff_winkler_m3.json  kalthoff_winkler_m4.json  kalthoff_winkler_m6.json  thermal.json
examples/mechanics/: CMakeLists.txt  berkovich_indenter.cpp  central_crack.cpp  compact_tension_test.cpp  conical_indenter.cpp  crack_branching.cpp  crack_branching_with_inclusion.cpp  crack_inclusion.cpp  disk_impact.cpp  dogbone_tensile_test.cpp  dogbone_tensile_test_ADR.cpp  elastic_wave.cpp  fiber_reinforced_composite.cpp  flat_indenter.cpp  fragmenting_cylinder.cpp  hertzian_contact.cpp  indentation_test.cpp  kalthoff_winkler.cpp  monoblock.cpp  plate_with_hole.cpp  polycrystal.cpp  random_cracks.cpp  read_file.cpp  simple_impact.cpp  sphere_indenter.cpp  spherical_indenter.cpp
examples/mechanics/inputs/: berkovich_indenter.json  central_crack.json  compact_tension_test.json  conical_indenter.json  crack_branching.json  crack_branching_stress_test.json  crack_branching_with_inclusion.json  crack_inclusion.json  disk_impact.json  dogbone_tensile_test.json  dogbone_tensile_test_lead.json  dogbone_tensile_test_steel.json  elastic_wave.json  fiber_reinforced_composite.json  fragmenting_cylinder.json  hertzian_contact.json  indentation_test.json  kalthoff_winkler.json  monoblock.json  plate_tension.json  plate_with_hole.json  polycrystal.json  random_cracks.json  read_file.json  simple_impact.json  sphere_indenter.json  spherical_indenter.json
examples/thermomechanics/: CMakeLists.txt  hip_cylinder.cpp  hip_cylinder_ref.cpp  hip_rve_cube.cpp  hip_rve_elastic_plastic_creep_sphere_density_evolution.cpp  hip_rve_elastic_plastic_sphere.cpp  hip_rve_elastic_plastic_sphere_density_evolution.cpp  hip_rve_elastic_sphere.cpp  hip_rve_heat_transfer_sphere.cpp  hip_rve_sphere.cpp  thermal_crack.cpp  thermal_crack_heat_transfer.cpp  thermal_deformation.cpp  thermal_deformation_bimaterial.cpp  thermal_deformation_bimaterial_heat_transfer.cpp  thermal_deformation_heat_transfer.cpp  thermal_deformation_heat_transfer_monoblock.cpp  thermal_deformation_heat_transfer_monoblock_ref.cpp  thermal_deformation_heat_transfer_prenotched.cpp  thermal_monoblock_deformation_W.json  thermal_monoblock_deformation_ref.cpp  thermo_elastic_plastic_monoblock.cpp
examples/thermomechanics/inputs/: heat_transfer.json  hip_cylinder.json  hip_cylinder_ref.json  hip_cylinder_temp.json  hip_rve_cube.json  hip_rve_cube_ref.json  hip_rve_elastic_heat_transfer_sphere.json  hip_rve_elastic_heat_transfer_sphere_T.json  hip_rve_elastic_heat_transfer_sphere_T_P.json  hip_rve_elastic_plastic_creep_sphere_density_evolution.json  hip_rve_elastic_plastic_sphere.json  hip_rve_elastic_plastic_sphere_density_evolution.json  hip_rve_elastic_sphere.json  hip_rve_heat_transfer_sphere.json  hip_rve_sphere.json  thermal_crack.json  thermal_crack_temp.json  thermal_deformation.json  thermal_deformation_bimaterial.json  thermal_deformation_bimaterial_heat_transfer.json  thermal_deformation_cube.json  thermal_deformation_cube_temp.json  thermal_deformation_heat_transfer.json  thermal_deformation_temp.json  thermal_monoblock_deformation_W.json  thermal_monoblock_deformation_W_ref.json  thermo_elastic_plastic_monoblock.json
regression_test/: CMakeLists.txt  tstCrackInclusion.hpp  tstCubeBinaryMaterial.hpp  tstCubeSingleMaterial.hpp  tstElasticWave.hpp  tstKalthoffWinkler.hpp
src/: CMakeLists.txt  CabanaPD.hpp  CabanaPD_BodyTerm.hpp  CabanaPD_Boundary.hpp  CabanaPD_Comm.hpp  CabanaPD_Constants.hpp  CabanaPD_Contact.hpp  CabanaPD_DisplacementProfile.hpp  CabanaPD_Fields.hpp  CabanaPD_Force.hpp  CabanaPD_ForceModels.hpp  CabanaPD_ForceModelsMulti.hpp  CabanaPD_Geometry.hpp  CabanaPD_HeatTransfer.hpp  CabanaPD_Indexing.hpp  CabanaPD_Input.cpp  CabanaPD_Input.hpp  CabanaPD_Integrate.hpp  CabanaPD_Interpolation.hpp  CabanaPD_Neighbor.hpp  CabanaPD_Output.hpp  CabanaPD_OutputProfiles.hpp  CabanaPD_Particles.hpp  CabanaPD_Prenotch.hpp  CabanaPD_Properties.hpp  CabanaPD_Solver.hpp  CabanaPD_Timer.hpp  CabanaPD_Types.hpp  CabanaPD_config.hpp.cmakein
src/force/: CabanaPD_Contact.hpp  CabanaPD_ContactModels.hpp  CabanaPD_ForceModels_Contact.hpp  CabanaPD_ForceModels_Correspondence.hpp  CabanaPD_ForceModels_LPS.hpp  CabanaPD_ForceModels_PMB.hpp  CabanaPD_Force_Contact.hpp  CabanaPD_Force_Correspondence.hpp  CabanaPD_Force_HertzianContact.hpp  CabanaPD_Force_LPS.hpp  CabanaPD_Force_PMB.hpp  CabanaPD_Hertzian.hpp  CabanaPD_HertzianContact.hpp  CabanaPD_HertzianJKR.hpp  CabanaPD_LPS.hpp  CabanaPD_PMB.hpp
src/force_models/: CabanaPD_Contact.hpp  CabanaPD_Hertzian.hpp  CabanaPD_HertzianJKR.hpp  CabanaPD_LPS.hpp  CabanaPD_PMB.hpp
test_harness/: CabanaPD_testing_macros.cmake  TestCUDA_Category.hpp  TestHIP_Category.hpp  TestOPENMP_Category.hpp  TestPTHREAD_Category.hpp  TestSERIAL_Category.hpp  mpi_unit_test_main.cpp
unit_test/: CMakeLists.txt  TestCUDA_Category.hpp  TestHIP_Category.hpp  TestOPENMP_Category.hpp  TestPTHREAD_Category.hpp  TestSERIAL_Category.hpp  mpi_unit_test_main.cpp  tstComm.hpp  tstForce.hpp  tstHertz.hpp  tstHertzJKR.hpp  tstIndexing.hpp  tstIntegrator.hpp  tstNormalRepulsion.hpp  tstParticles.hpp
unit_test/inputs/: hertzian_contact.json  hertzian_jkr_contact.json
(+11 files in other folders)
