add_executable(ThermalDeformation thermal_deformation.cpp)
target_link_libraries(ThermalDeformation LINK_PUBLIC CabanaPD)

add_executable(ThermalCrack thermal_crack.cpp)
target_link_libraries(ThermalCrack LINK_PUBLIC CabanaPD)

add_executable(ThermalDeformationHeatTransfer thermal_deformation_heat_transfer.cpp)
target_link_libraries(ThermalDeformationHeatTransfer LINK_PUBLIC CabanaPD)

add_executable(ThermalDeformationHeatTransferPrenotched thermal_deformation_heat_transfer_prenotched.cpp)
target_link_libraries(ThermalDeformationHeatTransferPrenotched LINK_PUBLIC CabanaPD)

add_executable(HIPCylinder hip_cylinder.cpp)
target_link_libraries(HIPCylinder LINK_PUBLIC CabanaPD)

add_executable(HIPRveCube hip_rve_cube.cpp)
target_link_libraries(HIPRveCube LINK_PUBLIC CabanaPD)


install(TARGETS ThermalDeformation ThermalCrack ThermalDeformationHeatTransfer ThermalDeformationHeatTransferPrenotched HIPCylinder HIPRveCube DESTINATION ${CMAKE_INSTALL_BINDIR})
