add_executable(ThermalDeformation thermal_deformation.cpp)
target_link_libraries(ThermalDeformation LINK_PUBLIC CabanaPD)

add_executable(ThermalCrack thermal_crack.cpp)
target_link_libraries(ThermalCrack LINK_PUBLIC CabanaPD)

add_executable(ThermalDeformationHeatTransfer thermal_deformation_heat_transfer.cpp)
target_link_libraries(ThermalDeformationHeatTransfer LINK_PUBLIC CabanaPD)

add_executable(ThermalDeformationHeatTransferPrenotched thermal_deformation_heat_transfer_prenotched.cpp)
target_link_libraries(ThermalDeformationHeatTransferPrenotched LINK_PUBLIC CabanaPD)

add_executable(ThermalDeformationBiMaterial thermal_deformation_bimaterial.cpp)
target_link_libraries(ThermalDeformationBiMaterial LINK_PUBLIC CabanaPD)

install(TARGETS ThermalDeformation ThermalCrack ThermalDeformationHeatTransfer ThermalDeformationHeatTransferPrenotched ThermalDeformationBiMaterial DESTINATION ${CMAKE_INSTALL_BINDIR})

#add_executable(HipRveSphere hip_rve_sphere.cpp)
#target_link_libraries(HipRveSphere LINK_PUBLIC CabanaPD)
add_executable(HipRveElasticSphere hip_rve_elastic_sphere.cpp)
target_link_libraries(HipRveElasticSphere LINK_PUBLIC CabanaPD)
add_executable(HipRveHeatTransferSphere hip_rve_heat_transfer_sphere.cpp)
target_link_libraries(HipRveHeatTransferSphere LINK_PUBLIC CabanaPD)
add_executable(HipRveElasticPlasticSphere hip_rve_elastic_plastic_sphere.cpp)
target_link_libraries(HipRveElasticPlasticSphere LINK_PUBLIC CabanaPD)
#add_executable(HipRveElasticPlasticSphereDensityEvolution hip_rve_elastic_plastic_sphere_density_evolution.cpp)
#target_link_libraries(HipRveElasticPlasticSphereDensityEvolution LINK_PUBLIC CabanaPD)
add_executable(HipRveElasticPlasticCreepSphereDensityEvolution hip_rve_elastic_plastic_creep_sphere_density_evolution.cpp)
target_link_libraries(HipRveElasticPlasticCreepSphereDensityEvolution LINK_PUBLIC CabanaPD)
install(TARGETS HipRveElasticSphere HipRveHeatTransferSphere HipRveElasticPlasticSphere HipRveElasticPlasticCreepSphereDensityEvolution)# HipRveElasticPlasticSphereDensityEvolution)
