add_executable(ThermalDeformation thermal_deformation.cpp)
target_link_libraries(ThermalDeformation LINK_PUBLIC CabanaPD)

add_executable(ThermalCrack thermal_crack.cpp)
target_link_libraries(ThermalCrack LINK_PUBLIC CabanaPD)

add_executable(ThermalDeformationHeatTransfer thermal_deformation_heat_transfer.cpp)
target_link_libraries(ThermalDeformationHeatTransfer LINK_PUBLIC CabanaPD)

add_executable(ThermalDeformationHeatTransferPrenotched thermal_deformation_heat_transfer_prenotched.cpp)
target_link_libraries(ThermalDeformationHeatTransferPrenotched LINK_PUBLIC CabanaPD)

add_executable(ThermalDeformationBiMaterial thermal_deformation_bimaterial.cpp)
target_link_libraries(ThermalDeformationBiMaterial LINK_PUBLIC CabanaPD)

add_executable(ThermalDeformationBiMaterialHeatTransfer thermal_deformation_bimaterial_heat_transfer.cpp)
target_link_libraries(ThermalDeformationBiMaterialHeatTransfer LINK_PUBLIC CabanaPD)

install(TARGETS ThermalDeformation ThermalCrack ThermalDeformationHeatTransfer ThermalDeformationHeatTransferPrenotched ThermalDeformationBiMaterial ThermalDeformationBiMaterialHeatTransfer DESTINATION ${CMAKE_INSTALL_BINDIR})
